@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      class com.example.keepmoneyv3.adapters.GridViewCategoryAdapter {
          - categories : ArrayList<Category>
          - context : Context
          + GridViewCategoryAdapter()
          + buildMap()
          + getCategories()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      class com.example.keepmoneyv3.adapters.ListAdapter {
          - context : Context
          - items : ArrayList<ListPurchases>
          + ListAdapter()
          + buildMap()
          + getCount()
          + getItem()
          + getItemId()
          + getView()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      class com.example.keepmoneyv3.adapters.ListAdapter.ListPurchases {
          - image : int
          - itemName : String
          - price : float
          + ListPurchases()
          + getImage()
          + getItemName()
          + getPrice()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      class com.example.keepmoneyv3.adapters.WishListAdapter {
          - context : Context
          - items : ArrayList<ListPurchases>
          - root : View
          + WishListAdapter()
          + buildMap()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setOnItemClickListener()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      class com.example.keepmoneyv3.adapters.WishListAdapter.ListPurchases {
          - listName : String
          - price : float
          + ListPurchases()
          + getListName()
          + getPrice()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      interface com.example.keepmoneyv3.adapters.WishListAdapter.OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  namespace com.example.keepmoneyv3 {
    namespace adapters {
      class com.example.keepmoneyv3.adapters.WishListAdapter.WLViewHolder {
          ~ cardView : CardView
          ~ txtListName : TextView
          ~ txtTotList : TextView
          ~ WLViewHolder()
      }
    }
  }


  com.example.keepmoneyv3.adapters.GridViewCategoryAdapter -up-|> android.widget.BaseAdapter
  com.example.keepmoneyv3.adapters.ListAdapter -up-|> android.widget.BaseAdapter
  com.example.keepmoneyv3.adapters.ListAdapter +-down- com.example.keepmoneyv3.adapters.ListAdapter.ListPurchases
  com.example.keepmoneyv3.adapters.ListAdapter.ListPurchases .up.|> java.io.Serializable
  com.example.keepmoneyv3.adapters.WishListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.keepmoneyv3.adapters.WishListAdapter o-- com.example.keepmoneyv3.adapters.WishListAdapter.OnItemClickListener : listener
  com.example.keepmoneyv3.adapters.WishListAdapter +-down- com.example.keepmoneyv3.adapters.WishListAdapter.ListPurchases
  com.example.keepmoneyv3.adapters.WishListAdapter +-down- com.example.keepmoneyv3.adapters.WishListAdapter.OnItemClickListener
  com.example.keepmoneyv3.adapters.WishListAdapter +-down- com.example.keepmoneyv3.adapters.WishListAdapter.WLViewHolder
  com.example.keepmoneyv3.adapters.WishListAdapter.ListPurchases .up.|> java.io.Serializable
  com.example.keepmoneyv3.adapters.WishListAdapter.WLViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
